--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -17,23 +18,27 @@
     <!-- Header -->
     <header class="header">
 
-        <nav class="header-navigation">
-            <a href="./index.html" class="header-logo link">Web<span class="header-logo-second">Studio</span></a>
+        <div class="container">
 
-            <ul class="header-list-nav list">
-                <li class="header-item"><a class="header-link link current-page" href="./index.html">Студия</a></li>
-                <li class="header-item"><a class="header-link link" href="./portfolio.html">Портфолио</a></li>
-                <li class="header-item"><a class="header-link link" href="" >Контакты</a></li>
-            </ul>
-        </nav>
-        <ul class="header-contact-list list">
-            <li>
-                <a class="header-mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-                <a class="header-tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
-        </ul>
+            <nav class="header-navigation">
+                <a href="./index.html" class="header-logo link">Web<span class="header-logo-second">Studio</span></a>
+    
+                <ul class="header-list-nav list">
+                    <li class="header-item"><a class="header-link link current-page" href="./index.html">Студия</a></li>
+                    <li class="header-item"><a class="header-link link" href="./portfolio.html">Портфолио</a></li>
+                    <li class="header-item"><a class="header-link link" href="" >Контакты</a></li>
+                </ul>
+            </nav>
+            <ul class="header-contact-list list">
+                <li>
+                    <a class="header-mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a class="header-tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+            </ul>  
+                      
+        </div>
 
     </header>
 
