--- a/portfolio.html
+++ b/portfolio.html
@@ -19,6 +19,9 @@
 
     <!-- Header -->
     <header class="header">
+        <div class="container">
+
+<div class="header-container">
         <nav class="header-navigation">
             <a href="./index.html" class="header-logo link">Web<span class="header-logo-second">Studio</span></a>
 
@@ -29,6 +32,7 @@
                 <li class="header-item"><a class="header-link link" href="">Контакты</a></li>
             </ul>
         </nav>
+
         <ul class="header-contact-list list">
             <li>
                 <a class="header-mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -37,6 +41,8 @@
                 <a class="header-tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
+</div>
+        </div>
     </header>
 
     <!-- Hiro -->
