--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                             class="header-logo-second">Studio</span></a>
 
                     <ul class="header-list-nav list">
-                        <li class="header-item"><a class="header-link link" href="./index.html">Студия</a></li>
-                        <li class="header-item"><a class="header-link link current-page"
+                        <li class="header-item"><a class="header-link link current-page" href="./index.html">Студия</a></li>
+                        <li class="header-item"><a class="header-link link "
                                 href="./portfolio.html">Портфолио</a>
                         </li>
                         <li class="header-item"><a class="header-link link" href="">Контакты</a></li>
@@ -60,7 +60,7 @@
 
             <div class="container">
 
-                <div class="baner-container">
+                <div class="banner-container">
 
                     <h1 class="banner-title">Эффективные решения для вашего бизнеса </h1>
                     <button class="banner-button" type="button">Заказать услугу</button>
@@ -75,7 +75,7 @@
 
             <div class="container">
 
-                <h2 class="hidden-desc">Студия</h2>
+                <h2 class="visually-hidden">Студия</h2>
 
 
                 <ul class="studio-list list">
