--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 
                 <ul class="studio-list list">
-                    <li>
+                    <li class="studio-cart">
                         <h3 class="studio-title">
                             Внимание к деталям
                         </h3>
@@ -87,7 +87,7 @@
                             Идейные соображения, а также начало повседневной работы по формированию позиции.
                         </p>
                     </li>
-                    <li>
+                    <li class="studio-cart">
                         <h3 class="studio-title">
                             Пунктуальность
                         </h3>
@@ -95,7 +95,7 @@
                             Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                         </p>
                     </li>
-                    <li>
+                    <li class="studio-cart">
                         <h3 class="studio-title">
                             Планирование
                         </h3>
@@ -103,7 +103,7 @@
                             Равным образом консультация с широким активом в значительной степени обуславливает.
                         </p>
                     </li>
-                    <li>
+                    <li class="studio-cart">
                         <h3 class="studio-title">
                             Современные технологии
                         </h3>
@@ -118,6 +118,8 @@
 
         <!-- Work -->
         <section class="work">
+
+            <div class="container">
             <h2 class="work-title">Чем мы занимаемся</h2>
             <ul class="work-list list">
                 <li>
@@ -130,11 +132,15 @@
                     <img src="./images/main/box-3.jpeg" alt="Дизайнерские решения" width="370" height="294">
                 </li>
             </ul>
+            </div>
         </section>
 
         <!-- Team -->
         <section class="team">
+            <div class="container">
+
             <h2 class="team-title">Наша команда</h2>
+            
             <ul class="team-list list">
                 <li class="team-member-one">
                     <img src="./images//main/team-card-1.jpeg" alt="Игорь Демьяненко, Product Designer" width="270"
@@ -160,6 +166,7 @@
                     <p class="team-member-text">UI Designer</p>
                 </li>
             </ul>
+            </div>
         </section>
     </main>
 
