--- a/index.html
+++ b/index.html
@@ -121,14 +121,15 @@
 
             <div class="container">
             <h2 class="work-title">Чем мы занимаемся</h2>
+
             <ul class="work-list list">
-                <li>
+                <li class="work-list-cards">
                     <img src="./images/main/box-1.jpeg" alt="Десктопные приложения" width="370" height="294">
                 </li>
-                <li>
+                <li class="work-list-cards">
                     <img src="./images/main/box-2.jpeg" alt="Мобильные приложения" width="370" height="294">
                 </li>
-                <li>
+                <li class="work-list-cards">
                     <img src="./images/main/box-3.jpeg" alt="Дизайнерские решения" width="370" height="294">
                 </li>
             </ul>
@@ -142,36 +143,47 @@
             <h2 class="team-title">Наша команда</h2>
             
             <ul class="team-list list">
-                <li class="team-member-one">
+                <li class="team-master">
                     <img src="./images//main/team-card-1.jpeg" alt="Игорь Демьяненко, Product Designer" width="270"
                         height="260">
+                        <div class="team-master-bottom">
                     <h3 class="team-member-name">Игорь Демьяненко </h3>
                     <p class="team-member-text">Product Designer</p>
+                    </div>
                 </li>
-                <li class="team-member-two">
+                <li class="team-master">
                     <img src="./images//main/team-card-2.jpeg" alt="Ольга Репина, Frontend Developer" width="270"
                         height="260">
+                        <div class="team-master-bottom">
                     <h3 class="team-member-name">Ольга Репина</h3>
                     <p class="team-member-text">Frontend Developer</p>
+                    </div>
                 </li>
-                <li class="team-member-three">
+                <li class="team-master">
                     <img src="./images/main/team-card-3.jpeg" alt="Николай Тарасов, Marketing" width="270" height="260">
+                    <div class="team-master-bottom">
                     <h3 class="team-member-name">Николай Тарасов</h3>
                     <p class="team-member-text">Marketing</p>
+                    </div>
                 </li>
-                <li class="team-member-four">
+                <li class="team-master">
                     <img src="./images//main/team-card-4.jpeg" alt="Михаил Ермаков, UI Designer" width="270"
                         height="260">
+                        <div class="team-master-bottom">
                     <h3 class="team-member-name">Михаил Ермаков</h3>
                     <p class="team-member-text">UI Designer</p>
+                    </div>
                 </li>
-            </ul>
+               
             </div>
         </section>
     </main>
 
     <!-- Footer -->
     <footer class="footer">
+
+        <div class="container footer-cont">
+
         <a href="./index.html" class="footer-logo link">Web<span class="footer-logo-second">Studio</span></a>
 
         <address class="footer-address">
@@ -188,6 +200,8 @@
                 </li>
             </ul>
         </address>
+</div>
+
     </footer>
 
 </body>
