--- a/portfolio.html
+++ b/portfolio.html
@@ -27,8 +27,8 @@
                 <a href="./index.html" class="header-logo link">Web<span class="header-logo-second">Studio</span></a>
 
                 <ul class="header-list-nav list">
-                    <li class="header-item"><a class="header-link link current-page" href="./index.html">Студия</a></li>
-                    <li class="header-item"><a class="header-link link " href="./portfolio.html">Портфолио</a>
+                    <li class="header-item"><a class="header-link link " href="./index.html">Студия</a></li>
+                    <li class="header-item"><a class="header-link link current-page" href="./portfolio.html">Портфолио</a>
                     </li>
                     <li class="header-item"><a class="header-link link" href="">Контакты</a></li>
                 </ul>
