--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <section class="studio">
 
-            <div class="container">
+            <div class="container studio-container">
 
                 <h2 class="visually-hidden">Студия</h2>
 
@@ -119,7 +119,7 @@
         <!-- Work -->
         <section class="work">
 
-            <div class="container">
+            <div class="container work-container">
             <h2 class="work-title">Чем мы занимаемся</h2>
 
             <ul class="work-list list">
@@ -182,7 +182,7 @@
     <!-- Footer -->
     <footer class="footer">
 
-        <div class="container footer-cont">
+        <div class="container footer-container">
 
         <a href="./index.html" class="footer-logo link">Web<span class="footer-logo-second">Studio</span></a>
 
@@ -192,10 +192,10 @@
 
         <address>
             <ul class="footer-contact-list list">
-                <li>
+                <li class="footer-mail">
                     <a class="footer-mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
-                <li>
+                <li class="footer-tel">
                     <a class="footer-tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
